snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2.module.sha256
ccfcd53ad8d6777a7984cdabd40d96e7614d25786e8bf8b35ce0460173583400